# jupyterlab-excalidraw

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README.md  install.json  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
jupyterlab_excalidraw/: __init__.py  _version.py
jupyterlab_excalidraw/tests/: test_extension.py
schema/: plugin.json
src/: icons.ts  index.ts  model.ts  widget.ts
style/: base.css
