[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-excalidraw"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
description = "JupyterLab extension for Excalidraw — collaborative whiteboard drawing"
dynamic = ["version"]
authors = [
    { name = "Gonzalo Pena-Castellanos" },
]
keywords = [
    "excalidraw",
    "drawing",
    "whiteboard",
    "jupyter",
    "jupyterlab",
    "jupyterlab-extension",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "jupyterlab>=4.0.0,<5",
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_excalidraw/labextension"]
exclude = [".github", "node_modules", "*.tgz"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_excalidraw/labextension" = "share/jupyter/labextensions/jupyterlab-excalidraw"
"install.json" = "share/jupyter/labextensions/jupyterlab-excalidraw/install.json"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
