[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-excalidraw"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
description = "JupyterLab extension for Excalidraw — collaborative whiteboard drawing"
dynamic = ["version"]
authors = [
    { name = "Gonzalo Peña-Castellanos" },
]
keywords = [
    "excalidraw",
    "drawing",
    "whiteboard",
    "jupyter",
    "jupyterlab",
    "jupyterlab-extension",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/goanpeca/jupyterlab-excalidraw"
Repository = "https://github.com/goanpeca/jupyterlab-excalidraw"
Documentation = "https://github.com/goanpeca/jupyterlab-excalidraw#readme"
Issues = "https://github.com/goanpeca/jupyterlab-excalidraw/issues"
Changelog = "https://github.com/goanpeca/jupyterlab-excalidraw/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.15.10",
    "jupyterlab>=4.0.0,<5",
]

[tool.pytest.ini_options]
testpaths = ["jupyterlab_excalidraw/tests"]
addopts = "-v --cov=jupyterlab_excalidraw --cov-report=term-missing"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["version"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_excalidraw/labextension"]
exclude = [".github", "node_modules", "*.tgz"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_excalidraw/labextension" = "share/jupyter/labextensions/jupyterlab-excalidraw"
"install.json" = "share/jupyter/labextensions/jupyterlab-excalidraw/install.json"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
